# peapod-v2

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROTOCOL.md  README.md  SECURITY.md  index.html  install.ps1  install.sh  package-lock.json  package.json
.agents/: ci-ops.md  frontend-ui.md  qa-bot.md  rust-core.md
.github/: release-drafter.yml
.github/workflows/: release-drafter.yml  release.yml  test.yml
scripts/: bump_version.sh
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: simulate.rs
src-tauri/src/: chunk.rs  core.rs  discovery.rs  lib.rs  main.rs  protocol.rs  state.rs  transport.rs  webserver.rs
