[package]
name = "peapod"
version = "0.3.0"
description = "PeaPod: Local swarm protocol"
authors = ["CashlyBot"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
socket2 = { version = "0.5", features = ["all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]