[package]
name = "peapod"
version = "0.8.1-alpha"
description = "PeaPod: Local swarm protocol"
authors = ["CashlyCash"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
socket2 = { version = "0.5", features = ["all"] }
clap = { version = "4.4", features = ["derive"] }
axum = "0.7"
tower = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]